# SpeedTube

./: .env_template  .gitignore  LICENSE  README.md  bedrock_helper.py  evaluate.py  langchain_helper.py  pyproject.toml  requirement.txt  requirements.txt  test.py
backend/: main.py
frontend/: package-lock.json
frontend/src/: App.css  App.js
